--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,7 +1,5 @@
 <h1><%= @page.name %></h1>
-
 <%= render :partial => 'sidebar' %>
-
-<div id="content">
+<div class="content_cms">
 	<%= @page.body %>
 </div>
