--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,1 @@
-<h1>Pages</h1>
-
-<ul>
-	<% @pages.each do |page| %>
-	<li><%= link_to page.name, page_path(page.permalink) %></li>
-	<% end %>
-</ul>
+<h1>Home</h1>
