--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,37 +2,58 @@
 											"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-	<title><%= metatag_title(@metatag_object, SITE_NAME) %></title>
+  <head>
+  	<title><%= metatag_title(@metatag_object, SITE_NAME) %></title>
 
-	<%= metatags(@metatag_object) -%>
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-	<meta http-equiv="content-language" content="en"/>
-	<meta name="author" content="DBurns Design - Professional Website Design in Los Angeles, California"/>
-	<meta name="distribution" content="global"/>
-	<meta name="revisit-after" content="30 days"/>
-	<meta name="copyright" content="DBurns Design"/>
+  	<%= metatags(@metatag_object) -%>
+  	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  	<meta http-equiv="content-language" content="en"/>
+  	<meta name="author" content="DBurns Design - Professional Website Design in Los Angeles, California"/>
+  	<meta name="distribution" content="global"/>
+  	<meta name="revisit-after" content="30 days"/>
+  	<meta name="copyright" content="DBurns Design"/>
 
-	<%= stylesheet_link_tag "default" %>
+  	<%= stylesheet_link_tag "default" %>
 
-	<link href="/favicon.ico" type="image/x-icon" rel="icon"/>
-	<link href="/favicon.ico" type="image/x-icon" rel="shortcut icon"/>
+  	<link href="/favicon.ico" type="image/x-icon" rel="icon"/>
+  	<link href="/favicon.ico" type="image/x-icon" rel="shortcut icon"/>
 
-	<%= javascript_include_tag :defaults, "plugins/crossbrowser", "http://www.google-analytics.com/ga", "default" %>
-	<%= yield :head %>
-</head>
-<body>
-
-<div id="content">
-	<% [:error, :notice].each do |message| %>
-		<% content_tag :div, :class => message do %>
-			<%= flash[message] %>
-		<% end if flash[message] %>
-	<% end %>
-	<%= yield  %>
-</div>
-
-<div id="footer"><%= link_to 'Professional Website Design', 'http://www.dburnsdesign.com', :target => '_blank' %> by DBurns Design</div>
-
-</body>
+  	<%= javascript_include_tag :defaults, "plugins/crossbrowser", "http://www.google-analytics.com/ga", "default" %>
+  	<%= yield :head %>
+  </head>
+  <body>
+    <ul style="float:right;">
+      <li><%= link_to "Contact", page_path("contact") %></li>
+      <li><%= link_to "Sitemap", page_path("sitemap") %></li>
+    </ul>
+    <ul id="menu">
+      <li><%= link_to "Welcome", root_path %></li>
+      <li><%= link_to "About Us", page_path("about-us") %></li>
+      <li><%= link_to "Why Patent Lock", page_path("why-patent-lock") %></li>
+      <li><%= link_to "How Patent Lock Works", page_path("how-patent-lock-works") %></li>
+      <li><%= link_to "Blog", page_path("blog") %></li>
+      <li><%= link_to "Trademarks", page_path("trademarks") %></li>
+      <li><%= link_to "Services", page_path("services") %></li>
+      <li><%= link_to "Inventor Resource", page_path("inventor-resource") %></li>
+      <li><%= link_to "Member Login", "login_path" %></li>
+    </ul>
+    <div id="content">
+    	<% [:error, :notice].each do |message| %>
+    		<% content_tag :div, :class => message do %>
+    			<%= flash[message] %>
+    		<% end if flash[message] %>
+    	<% end %>
+    	<%= yield  %>
+    </div>
+    <div id="footer">
+      <ul>
+        <li><%= link_to "Welcome", root_path %></li>
+        <li><%= link_to "Sitemap", page_path("sitemap") %></li>
+        <li><%= link_to "Privacy", page_path("privacy") %></li>
+        <li><%= link_to "Terms of Use", page_path("terms-of-use") %></li>
+      </ul>
+      <p>&copy; Copyright Patent Lock&trade; - <%= link_to 'Professional Website Design', 'http://www.dburnsdesign.com', :target => '_blank' %> by DBurns Design</p>
+      <p>Patent Lock&trade; is a service of the Law Office of Michael N. Cohen, P.C.</p>
+    </div>
+  </body>
 </html>
