--- a/app/views/admin/layouts/_menu.html.erb
+++ b/app/views/admin/layouts/_menu.html.erb
@@ -7,4 +7,5 @@
 		</ul>
 	</li>
 	<li><%= link_to t(:menu_pages), admin_pages_path %></li>
+	<li><%= link_to "Questions", admin_questions_path %></li>
 </ul>
