--- a/app/views/admin/layouts/_menu.html.erb
+++ b/app/views/admin/layouts/_menu.html.erb
@@ -1,4 +1,5 @@
 <ul id="menu">
+  <li><%= link_to "Configuration", edit_admin_configuration_path(1) %></li>
 	<li>
 		<%= link_to t(:menu_users), admin_users_path %>
 		<ul>
