--- a/app/views/admin/questions/index.html.erb
+++ b/app/views/admin/questions/index.html.erb
@@ -5,6 +5,7 @@
 		<tr>
 			<th>Name</th>
 			<th>Help Text</th>
+			<th class="hidden">Position</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -12,6 +13,7 @@
 			<tr>
 				<td><%=h question.name %></td>
 				<td><%=h question.help %></td>
+				<td class="hidden"><%=h question.position %></td>
 
 				<td><%=link_to t(:edit), edit_object_url(question) %></td>
 				<td><%=link_to t(:destroy), object_url(question), :confirm => t(:are_you_sure), :method => :delete %></td>
@@ -24,4 +26,4 @@
 <%= link_to t(:reorder), reorder_admin_questions_url %>
 
 
-<%= render :partial => '/admin/scaffold/data_table' %>
+<%= render :partial => '/admin/scaffold/data_table', :locals => {:sort => '[[ 2, "asc" ]]'} %>
