order process until payment and admin answers/order of an user

--- a/app/views/questionnaire/_question.html.erb
+++ b/app/views/questionnaire/_question.html.erb
@@ -1,9 +1,8 @@
 <%= f.hidden_field :order_id, :value => @order.id %>
 <%= f.hidden_field :question_id, :value => @question.id %>
 <p>
-  <%= question.name %>
+  <strong><%= question.name %></strong>
 </p>
 <p>
-  <%= f.label :body %>
   <%= f.text_field :body %>
 </p>
