--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -14,7 +14,8 @@
 				<td><%=h user.login %></td>
 				<td><%=h user.name %></td>
 				<td><%=h user.email %></td>
-
+        
+        <td><%= link_to "View Order", admin_user_order_path(user) if user.order %></td>
 				<td><%=link_to t(:edit), edit_object_url(user) %></td>
 				<td><%=link_to t(:destroy), object_url(user), :confirm => t(:are_you_sure), :method => :delete %></td>
 			</tr>
