--- a/app/views/questionnaire/terms.html.erb
+++ b/app/views/questionnaire/terms.html.erb
@@ -1,1 +1,23 @@
 <h1>Questionnaire &raquo; Terms Acceptance</h1>
+<div class="content_cms">
+  <h2><%= @page.name %></h2>
+  <%= @page.body %>
+  <ol>
+  <% @answers.each do |answer| %>
+    <li>
+      <strong><%= answer.question.name %></strong>
+      <p><%= answer.body %></p>
+    </li>
+  <% end %>
+  </ol>
+  <h2><%= @terms.name %></h2>
+  <%= @terms.body %>
+</div>
+<%= error_messages_for @object.class.to_s.underscore.to_sym %>
+<% form_for(@terms, :url => questionnaire_terms_path, :live_validations => true, :html => { :method => :post }) do |f| %>
+  <p>
+    <%= label_tag :accept, "Yes I agree with the Terms above" %>
+    <%= check_box_tag(:accept, value = "yes") %>
+  </p>
+  <p><%=submit_tag "Save & Continue" %></p>
+<% end %>
