--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,39 +22,39 @@
   	<%= yield :head %>
   </head>
   <body>
-    <ul style="float:right;">
-      <li><%= link_to "Contact", page_path("contact") %></li>
-      <li><%= link_to "Sitemap", page_path("sitemap") %></li>
-    </ul>
-    <ul id="menu">
-      <li><%= link_to "Welcome", root_path %></li>
-      <li><%= link_to "About Us", page_path("about-us") %></li>
-      <li><%= link_to "Why Patent Lock", page_path("why-patent-lock") %></li>
-      <li><%= link_to "How Patent Lock Works", page_path("how-patent-lock-works") %></li>
-      <li><%= link_to "Blog", page_path("blog") %></li>
-      <li><%= link_to "Trademarks", page_path("trademarks") %></li>
-      <li><%= link_to "Services", page_path("services") %></li>
-      <li><%= link_to "Inventor Resource", page_path("inventor-resource") %></li>
-      <li><%= link_to "Member Login", login_path %></li>
-      <li><%= link_to "Create an Account", new_user_path %></li>
-    </ul>
-    <div id="content">
-    	<% [:error, :notice].each do |message| %>
-    		<% content_tag :div, :class => message do %>
-    			<%= flash[message] %>
-    		<% end if flash[message] %>
-    	<% end %>
-    	<%= yield  %>
-    </div>
-    <div id="footer">
-      <ul>
-        <li><%= link_to "Welcome", root_path %></li>
+    <div id="main">
+      <ul id="help_menu">
+        <li><%= link_to "Contact", page_path("contact") %></li>
         <li><%= link_to "Sitemap", page_path("sitemap") %></li>
-        <li><%= link_to "Privacy", page_path("privacy") %></li>
-        <li><%= link_to "Terms of Use", page_path("terms-of-use") %></li>
       </ul>
-      <p>&copy; Copyright Patent Lock&trade; - <%= link_to 'Professional Website Design', 'http://www.dburnsdesign.com', :target => '_blank' %> by DBurns Design</p>
-      <p>Patent Lock&trade; is a service of the Law Office of Michael N. Cohen, P.C.</p>
+      <ul id="menu">
+        <li><%= link_to "Welcome", root_path %></li>
+        <li><%= link_to "Get Started", page_path("get-started") %></li>
+        <li><%= link_to "Why Patent Lock", page_path("why-patent-lock") %></li>
+        <li><%= link_to "About Us", page_path("about-us") %></li>
+        <li><%= link_to "Member Login", login_path %></li>
+      </ul>
+      <div id="content">
+      	<% [:error, :notice].each do |message| %>
+      		<% content_tag :div, :class => message do %>
+      			<%= flash[message] %>
+      		<% end if flash[message] %>
+      	<% end %>
+      	<%= yield  %>
+      </div>
+      <div id="footer">
+        <ul>
+          <li><%= link_to "Home", root_path %></li>
+          <li><%= link_to "Get Started", page_path("get-started") %></li>
+          <li><%= link_to "Why Patent Lock", page_path("why-patent-lock") %></li>
+          <li><%= link_to "About Us", page_path("about-us") %></li>
+          <li><%= link_to "Sitemap", page_path("sitemap") %></li>
+          <li><%= link_to "Privacy", page_path("privacy") %></li>
+          <li><%= link_to "Terms of Use", page_path("terms-of-use") %></li>
+        </ul>
+        <p>&copy; Copyright Patent Lock&trade; - <%= link_to 'Professional Website Design', 'http://www.dburnsdesign.com', :target => '_blank' %> by DBurns Design</p>
+        <p>Patent Lock&trade; is a service of the Law Office of Michael N. Cohen, P.C.</p>
+      </div>
     </div>
   </body>
 </html>
