--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,16 +23,17 @@
   </head>
   <body>
     <div id="main">
+      <%= link_to image_tag("patent_lock.png", :id => "logo", :alt => "Law Office of Michael Cohen - Patent Lock", :title => "Law Office of Michael Cohen - Patent Lock", :size => "289x83"), root_path %>
       <ul id="help_menu">
-        <li><%= link_to "Contact", page_path("contact") %></li>
-        <li><%= link_to "Sitemap", page_path("sitemap") %></li>
+        <li class="first"><%= link_to "contact", page_path("contact") %></li>
+        <li><%= link_to "sitemap", page_path("sitemap") %></li>
       </ul>
       <ul id="menu">
-        <li><%= link_to "Welcome", root_path %></li>
-        <li><%= link_to "Get Started", page_path("get-started") %></li>
-        <li><%= link_to "Why Patent Lock", page_path("why-patent-lock") %></li>
-        <li><%= link_to "About Us", page_path("about-us") %></li>
-        <li><%= link_to "Member Login", login_path %></li>
+        <li class="welcome"><%= link_to "Welcome", root_path %></li>
+        <li class="get_started"><%= link_to "Get Started", page_path("get-started") %></li>
+        <li class="why"><%= link_to "Why Patent Lock", page_path("why-patent-lock") %></li>
+        <li class="about"><%= link_to "About Us", page_path("about-us") %></li>
+        <li class="member_login"><%= link_to "Member Login", login_path %></li>
       </ul>
       <div id="content">
       	<% [:error, :notice].each do |message| %>
