--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -1,15 +1,18 @@
 @import url("plugins/crossbrowser.css");
 
 * {margin:0;padding:0;outline:none;}
+img {border:none;}
 
 a {color:black;text-decoration:none;}
 a:hover {text-decoration:underline;}
 
 h1 {font-size:18px;}
+h2 {font-size:15px;}
+h3 {font-size:12px;}
 
 ol {margin-left:20px;}
 
-body {background:white url(../images/bg/body.png) repeat-x;font:12px "Trebuchet MS", Verdana, Arial, sans-serif;}
+body {background:white url(../images/bg/body.png) repeat-x;font:12px "Trebuchet MS", Verdana, Arial, sans-serif;margin-bottom:20px;}
 
 #main {width:940px;margin:0 auto;}
 
@@ -36,15 +39,34 @@ body {background:white url(../images/bg/body.png) repeat-x;font:12px "Trebuchet 
 
 /*Home*/
 #medal_services {float:left;width:151px;margin-right:20px;}
-#medal_services ul {background:url(../images/bg/services_menu.jpg) no-repeat;margin-top:20px;height:168px;}
+#medal_services ul {background:url(../images/bg/services_menu.jpg) no-repeat;margin-top:20px;height:148px;padding:10px;}
+#medal_services ul h2 {color:#FFBD00;border-bottom:1px dotted white;padding-bottom:10px;margin-bottom:10px;}
+#medal_services ul li.head {margin:0;padding:0;background:none;}
+#medal_services ul li {list-style:none;margin:15px 0;font-size:11px;background:url(../images/bullet/yellow.png) 0 4px no-repeat;padding-left:10px;}
+#medal_services ul li a {color:white;display:block;}
+#medal_services ul li a:hover {color:#FFBD00;text-decoration:none;}
 
 #home {float:left;width:545px;height:340px;overflow:hidden;padding-bottom:20px;}
 
 #get_started_home {float:right;margin-top:55px;}
 
-#hot_boxes {float:left;width:715px;}
+#hot_boxes {float:left;width:720px;}
+#hot_boxes li {list-style:none;background:url(../images/bg/hot_boxes.png) 0 65px no-repeat;float:left;width:110px;height:220px;margin-right:10px;padding:0 14px 0 10px;}
+#hot_boxes li h3 {text-align:center;padding-bottom:5px;border-bottom:1px dotted #999;margin-bottom:5px;}
+#hot_boxes li small {display:block;height:70px;background-image:url(../images/bg/icons.jpg);margin:0 auto;margin-bottom:15px;}
+#hot_boxes li p {font-size:11px;line-height:12px;}
 
-#patent_search {background-color:yellow;float:right;width:200px;}
+#hot_boxes li small.investor {width:40px;}
+#hot_boxes li small.services {width:37px;background-position:-37px 5px;}
+#hot_boxes li small.how {width:56px;background-position:-75px 5px;}
+#hot_boxes li small.trademarks {width:76px;background-position:-130px 0;}
+#hot_boxes li small.blog {width:70px;background-position:-205px 10px;}
+
+#patent_search {background:url(../images/bg/patent_search.png) no-repeat;float:right;width:180px;height:162px;margin-top:30px;padding:10px;}
+#patent_search h3 {padding-bottom:5px;border-bottom:1px dotted #999;margin-bottom:15px;font-size:14px;}
+#patent_search p {width:110px;}
+#patent_search input {border:none;margin-top:20px;width:130px;height:22px;font-weight:bold;float:left;}
+#patent_search input.submit {width:40px;margin-left:5px;}
 
 /*Content*/
 #content {float:left;margin:20px 0;}
