--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,24 +1,26 @@
-<div class="form">
-  <%= f.error_messages %>
-  <p>
-    <%= f.label :login, "Login" %>
-    <%= f.text_field :login, :class => "{required:true, login:true}" %>
-  </p>
-  <p>
-    <%= f.label :name %>
-    <%= f.text_field :name, :class => "{required:true}" %>
-  </p>
-  <p>
-    <%= f.label :email %>
-    <%= f.text_field :email, :class => "{required:true, email:true}" %>
-  </p>
-  <p>
-    <%= f.label :password, "Password" %>
-    <%= f.password_field :password, :class => "{" + ((params[:action] == "edit") ? "" : "required:true, ") + "minlength:6}" %>
-  </p>
-  <p>
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, :class => "{" + ((params[:action] == "edit") ? "" : "required:true, ") + "equalTo: '#user_password'}" %>
-  </p>
-</div>
+<%= f.error_messages %>
+<p>
+  <%= f.label :name %>
+  <%= f.text_field :name, :class => "{required:true}" %>
+</p>
+<p>
+  <%= f.label :email %>
+  <%= f.text_field :email, :class => "{required:true, email:true}" %>
+</p>
+<p>
+  <%= f.label :login, "Login" %>
+  <%= f.text_field :login, :class => "{required:true, login:true}" %>
+</p>
+<p>
+  <%= f.label :password, "Password" %>
+  <%= f.password_field :password, :class => "{" + ((params[:action] == "edit") ? "" : "required:true, ") + "minlength:6}" %>
+</p>
+<p>
+  <%= f.label :password_confirmation %>
+  <%= f.password_field :password_confirmation, :class => "{" + ((params[:action] == "edit") ? "" : "required:true, ") + "equalTo: '#user_password'}" %>
+</p>
+<p class ="checkbox">
+  <%= f.check_box :newsletter %>
+  <%= f.label :newsletter, "I would like to receive the PatentLock newsletter.<br/>Sent no more than once per month." %>
+</p>
 <%= javascript "plugins/metadata", "plugins/validate" %>
