--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -6,6 +6,7 @@
 			<th>Login</th>
 			<th><%=t :user_name %></th>
 			<th><%=t :user_email %></th>
+			<th>Newsletter</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -14,6 +15,7 @@
 				<td><%=h user.login %></td>
 				<td><%=h user.name %></td>
 				<td><%=h user.email %></td>
+				<td><%= user.newsletter ? "Yes" : "No" %></td>
         
         <td><%= link_to "View Order", admin_user_order_path(user) if user.order %></td>
 				<td><%=link_to t(:edit), edit_object_url(user) %></td>
