layout trademark form

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,10 +2,10 @@
   <%= image_tag "medal.png", :alt => "The Patent Lock Advantage", :title => "The Patent Lock Advantage", :size => "149x149" %>
   <ul>
     <li class="head"><h2>Online Services</h2></li>
-    <li><%= link_to "Provisional Patent", "link" %></li>
-    <li><%= link_to "Patent Search", "link" %></li>
-    <li><%= link_to "Trademark Registration", "link" %></li>
-    <li><%= link_to "Trademark Search", "link" %></li>
+    <li><%= link_to "Provisional Patent", page_path("get-started") %></li>
+    <li><%= link_to "Patent Search", page_path("patent-search") %></li>
+    <li><%= link_to "Trademark Registration", page_path("trademark-registration") %></li>
+    <li><%= link_to "Trademark Search", page_path("trademark-search") %></li>
   </ul>
 </div>
 <div id="home">
